
  * Bugfix: when converting a Jsoup document to a W3C DOM, if an element is namespaced but not in a defined namespace,
    set it to the global namespace.
    <https://github.com/jhy/jsoup/issues/848>

  * Bugfix: attributes created with the Attribute constructor with just spaces for names would incorrectly pass
    validation.
    <https://github.com/jhy/jsoup/issues/1159>

  * Updated jetty-server (which is used for integration tests) to latest 9.2 series (9.2.26.v20180806).

*** Release 1.11.3 [2018-Apr-15]
  * Improvement: CDATA sections are now treated as whitespace preserving (regardless of the containing element), and are
    round-tripped into output HTML.
    <https://github.com/jhy/jsoup/issues/406>
    <https://github.com/jhy/jsoup/issues/965>

  * Improvement: added support for Deflate encoding.
    <https://github.com/jhy/jsoup/pull/982>

  * Improvement: when parsing <pre> tags, skip the first newline if present.
    <https://github.com/jhy/jsoup/issues/825>

  * Improvement: support nested quotes for attribute selection queries.
    <https://github.com/jhy/jsoup/pull/988>

  * Improvement: character references from Windows-1252 that are not valid Unicode are mapped to the appropriate
    Unicode replacement.
    <https://github.com/jhy/jsoup/pull/1046>

  * Improvement: accept a custom SSL socket factory in Jsoup.Connection.
    <https://github.com/jhy/jsoup/pull/1038>

  * Bugfix: "Mark has been invalidated" exception was thrown when parsing some URLs on Android <= 6.
    <https://github.com/jhy/jsoup/issues/990>

  * Bugfix: The Element.text() for <div>One</div>Two was "OneTwo", not "One Two".
    <https://github.com/jhy/jsoup/issues/812>

  * Bugfix: boolean attributes with empty string values were not collapsing in HTML output.
    <https://github.com/jhy/jsoup/issues/985>

  * Bugfix: when using the XML Parser set to lowercase normalize tags, uppercase closing tags were not correctly
    handled.
    <https://github.com/jhy/jsoup/issues/998>
