@@ -237,4 +237,12 @@ public class XmlTreeBuilderTest {
         Document doc = Jsoup.parse(xml, "", Parser.xmlParser());
         assertEquals("One", doc.select("val").text());
     }
+
+    @Test
+    public void handlesLTinScript() {
+        // https://github.com/jhy/jsoup/issues/1139
+        String html = "<script> var a=\"<?\"; var b=\"?>\"; </script>";
+        Document doc = Jsoup.parse(html, "", Parser.xmlParser());
+        assertEquals("<script> var a=\"\n <!--?\"; var b=\"?-->\"; </script>", doc.html()); // converted from pseudo xmldecl to comment
+    }
 }
